# pydantic-annotated

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/pydantic_annotated/: __init__.py
tests/: test_schema.py
