[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
target-version = ["py38"]


[tool.isort]
# Black compatible config
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true


[tool.poetry]
authors = ["Jacob Hayes <jacob.r.hayes@gmail.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
]
description = "Generate Pydantic Fields with typing.Annotated"
keywords = ["Annotated", "pydantic", "typing"]
license = "MIT"
name = "pydantic-annotated"
readme = "README.md"
repository = "http://github.com/JacobHayes/pydantic-annotated"
version = "0.0.1a0"

[tool.poetry.dependencies]
pydantic = "*"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "*"
isort = { extras = ["pyproject"], version = "*" }
pre-commit = "*"
# pyflakes's support for Annotated with constants isn't released yet
pyflakes = {git = "https://github.com/PyCQA/pyflakes.git", rev = "c23a81037d4f68067c4c987985d177ec7664de59"}
pytest = "*"


[tool.pytest.ini_options]
filterwarnings = ["error",]
